[gd_scene load_steps=46 format=2]

[ext_resource path="res://adnan/Camera.gd" type="Script" id=1]
[ext_resource path="res://2.glb" type="PackedScene" id=2]
[ext_resource path="res://other parts of the hallway/photos_2022_5_17_fst_wall-decay-scratches (1).jpg" type="Texture" id=3]
[ext_resource path="res://steampunk_lamps.glb" type="PackedScene" id=4]
[ext_resource path="res://adnan/asphalt_02_diff_4k.jpg" type="Texture" id=5]
[ext_resource path="res://hiii.glb" type="PackedScene" id=6]
[ext_resource path="res://adnan/CanvasLayer.gd" type="Script" id=7]
[ext_resource path="res://adnan/go to vent text.gd" type="Script" id=8]
[ext_resource path="res://material.material" type="Material" id=9]
[ext_resource path="res://adnan/ColorRect.gd" type="Script" id=10]
[ext_resource path="res://adnan/Conversation.gd" type="Script" id=11]
[ext_resource path="res://Dev_MS/Minigame/Assets/battlenet.ttf" type="DynamicFontData" id=12]

[sub_resource type="BoxShape" id=11]
extents = Vector3( 4.85664, 2, 0.574707 )

[sub_resource type="CubeMesh" id=10]
size = Vector3( 10, 2, 0 )

[sub_resource type="SpatialMaterial" id=12]
albedo_texture = ExtResource( 3 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 5.02015, 2.15341, 1 )

[sub_resource type="SpatialMaterial" id=13]
albedo_texture = ExtResource( 3 )

[sub_resource type="CubeMesh" id=1]
material = SubResource( 13 )
size = Vector3( 10, 2, 0 )

[sub_resource type="SpatialMaterial" id=17]
albedo_texture = ExtResource( 5 )

[sub_resource type="CubeMesh" id=18]
material = SubResource( 17 )
size = Vector3( 10, 0, 10 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 4.96867, 0.001, 6.50171 )

[sub_resource type="BoxShape" id=9]
extents = Vector3( 4.68196, 1.00761, 0.413802 )

[sub_resource type="SpatialMaterial" id=15]
albedo_texture = ExtResource( 3 )

[sub_resource type="CubeMesh" id=5]
material = SubResource( 15 )
size = Vector3( 10, 2, 0 )

[sub_resource type="SpatialMaterial" id=16]
albedo_texture = ExtResource( 3 )

[sub_resource type="CubeMesh" id=6]
material = SubResource( 16 )
size = Vector3( 10, 2, 0 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 5.40374, 1, 0.287476 )

[sub_resource type="CanvasItemMaterial" id=21]

[sub_resource type="GDScript" id=22]

[sub_resource type="StreamTexture" id=23]
flags = 7

[sub_resource type="VisualShaderNodeTexture" id=24]
texture = SubResource( 23 )

[sub_resource type="VisualShaderNodeScalarConstant" id=19]
constant = 3.508

[sub_resource type="VisualShader" id=20]
code = "shader_type spatial;
render_mode specular_schlick_ggx, async_visible;




void vertex() {
// Output:0

}

void fragment() {
// Scalar:4
	float n_out4p0 = 3.508000;

// Output:0
	ALPHA = n_out4p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -327.667, 70.5978 )
nodes/fragment/2/node = SubResource( 24 )
nodes/fragment/2/position = Vector2( -420, 380 )
nodes/fragment/4/node = SubResource( 19 )
nodes/fragment/4/position = Vector2( -120, 240 )
nodes/fragment/connections = PoolIntArray( 4, 0, 0, 1 )

[sub_resource type="ShaderMaterial" id=25]
next_pass = SubResource( 21 )
shader = SubResource( 20 )
script = SubResource( 22 )

[sub_resource type="BoxShape" id=26]
extents = Vector3( 0.355751, 1.11831, 0.328131 )

[sub_resource type="BoxShape" id=27]
extents = Vector3( 1, 0.194294, 1.13375 )

[sub_resource type="StyleBoxFlat" id=35]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.972549, 0.968627, 0.968627, 1 )

[sub_resource type="DynamicFont" id=36]
size = 25
font_data = ExtResource( 12 )

[sub_resource type="Gradient" id=28]

[sub_resource type="GradientTexture" id=29]
gradient = SubResource( 28 )

[sub_resource type="BoxShape" id=30]
extents = Vector3( 1.38692, 1, 1 )

[sub_resource type="Shader" id=31]

[sub_resource type="ShaderMaterial" id=32]
next_pass = ExtResource( 9 )
shader = SubResource( 31 )

[sub_resource type="Gradient" id=33]

[sub_resource type="GradientTexture2D" id=34]
gradient = SubResource( 33 )
fill_from = Vector2( 1, 0 )

[node name="BASEMENT" type="Spatial"]

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 0.00113447, 0, 0.999999, 0, 1, 0, -0.999999, 0, 0.00113447, 4.98717, 1.02011, 5.03261 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0111179, -0.775808, -9.79971 )
shape = SubResource( 11 )

[node name="MeshInstance3" type="MeshInstance" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.01127, 0, -9.93575 )
mesh = SubResource( 10 )
material/0 = SubResource( 12 )

[node name="FrontWall" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="FrontWall"]
shape = SubResource( 7 )

[node name="MeshInstance" type="MeshInstance" parent="FrontWall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.02304, 0.0783124 )
mesh = SubResource( 1 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9.53674e-07, 5.06023 )
mesh = SubResource( 18 )
skeleton = NodePath("Floor")

[node name="Floor" type="StaticBody" parent="MeshInstance2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -9.53674e-07, -5.06023 )

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance2/Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5.21707 )
shape = SubResource( 4 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.926388, 5.72409 )
current = true
script = ExtResource( 1 )

[node name="LeftWall" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0481787 )

[node name="CollisionShape" type="CollisionShape" parent="LeftWall"]
transform = Transform( 0.00113447, 0, 0.999999, 0, 1, 0, -0.999999, 0, 0.00113447, 4.98717, 1.02011, 4.98443 )
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="LeftWall"]
transform = Transform( 0.00113447, 0, 0.999999, 0, 1, 0, -0.999999, 0, 0.00113447, 4.98717, 1.02011, 4.98443 )
mesh = SubResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.983692, 10.04 )
mesh = SubResource( 6 )
skeleton = NodePath("StaticBody")

[node name="StaticBody" type="StaticBody" parent="MeshInstance"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.983692, 1.69942 )

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.983692, -1.69942 )
shape = SubResource( 8 )

[node name="steampunk_lamps" parent="." instance=ExtResource( 4 )]
transform = Transform( 0.02, 0, 0, 0, 0.02, 0, 0, 0, 0.02, 2.90018, -0.0070684, 0.198902 )

[node name="vent" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -4.05081, 1.51814, 9.87746 )

[node name="hiii" parent="vent" instance=ExtResource( 6 )]
transform = Transform( -0.999961, 0, -0.0088487, 0, 1, 0, 0.0088487, 0, -0.999961, -0.0305386, -0.0479746, -1.41861 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -33.0
margin_top = -50.0
margin_right = 1069.0
margin_bottom = 656.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 10 )

[node name="ColorRectTimer" type="Timer" parent="ColorRect"]

[node name="Instructions" type="CanvasLayer" parent="."]
script = ExtResource( 7 )

[node name="InstructionsTimer" type="Timer" parent="Instructions"]
wait_time = 0.05
one_shot = true

[node name="InstructionsBackground" type="NinePatchRect" parent="Instructions"]
material = SubResource( 25 )
margin_left = 363.0
margin_top = 195.0
margin_right = 605.92
margin_bottom = 278.6
rect_scale = Vector2( 1.58803, 1.27942 )
region_rect = Rect2( 1529, 746, 1, 0 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.054574, 2.55721, -0.35714 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 30, 0, 0, 0, 1, 0, 0, 0, 30, 0.149956, -1.97036, 4.48581 )
shape = SubResource( 26 )

[node name="Area2" type="Area" parent="."]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0.095382, 0.604691, 5.61166 )

[node name="CollisionShape" type="CollisionShape" parent="Area2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0243594, -0.0486282, -0.0563051 )
shape = SubResource( 27 )

[node name="go to vent text" type="CanvasLayer" parent="."]
script = ExtResource( 8 )

[node name="Node2D" type="Node2D" parent="go to vent text"]

[node name="Instructions" type="MarginContainer" parent="go to vent text/Node2D"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = 96.0
margin_right = 376.0
margin_bottom = 232.0
rect_scale = Vector2( 1.00117, 1 )

[node name="Panel" type="Panel" parent="go to vent text/Node2D/Instructions"]
margin_right = 378.0
margin_bottom = 136.0
custom_styles/panel = SubResource( 35 )

[node name="MarginContainer" type="MarginContainer" parent="go to vent text/Node2D/Instructions"]
margin_right = 378.0
margin_bottom = 136.0

[node name="HBoxContainer" type="HBoxContainer" parent="go to vent text/Node2D/Instructions/MarginContainer"]
margin_right = 378.0
margin_bottom = 136.0
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="go to vent text/Node2D/Instructions/MarginContainer/HBoxContainer"]
margin_top = 43.0
margin_right = 352.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 36 )
text = "  I think I hear something from the vent, 
  lets check it out"

[node name="NinePatchRect" type="NinePatchRect" parent="go to vent text"]
visible = false
modulate = Color( 0.0705882, 0.0666667, 0.0666667, 1 )
self_modulate = Color( 0.0627451, 0.0588235, 0.0588235, 1 )
margin_left = 222.0
margin_top = 89.0
margin_right = 270.0
margin_bottom = 129.0
rect_scale = Vector2( 11.1354, 12.1585 )
texture = SubResource( 29 )

[node name="RichTextLabel" type="RichTextLabel" parent="go to vent text"]
visible = false
margin_left = 349.0
margin_top = 300.0
margin_right = 619.0
margin_bottom = 525.0
rect_scale = Vector2( 3.49615, 4.7935 )
text = "go to vent "

[node name="Timer" type="Timer" parent="go to vent text"]

[node name="Area3" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.3104, 1.19039, 8.39414 )

[node name="CollisionShape" type="CollisionShape" parent="Area3"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -1.50762, -1.63169, 1.96011 )
shape = SubResource( 30 )

[node name="Converstaion" type="CanvasLayer" parent="."]
script = ExtResource( 11 )

[node name="Node2D" type="Node2D" parent="Converstaion"]

[node name="Instructions" type="MarginContainer" parent="Converstaion/Node2D"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = 96.0
margin_right = 376.0
margin_bottom = 232.0
rect_scale = Vector2( 1.00117, 1 )

[node name="Panel" type="Panel" parent="Converstaion/Node2D/Instructions"]
margin_right = 640.0
margin_bottom = 136.0
custom_styles/panel = SubResource( 35 )

[node name="MarginContainer" type="MarginContainer" parent="Converstaion/Node2D/Instructions"]
margin_right = 640.0
margin_bottom = 136.0

[node name="HBoxContainer" type="HBoxContainer" parent="Converstaion/Node2D/Instructions/MarginContainer"]
margin_right = 640.0
margin_bottom = 136.0
__meta__ = {
"_editor_description_": ""
}

[node name="Label1" type="Label" parent="Converstaion/Node2D/Instructions/MarginContainer/HBoxContainer"]
margin_top = 30.0
margin_right = 640.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 36 )
text = "  ???: So, my friend, our plan is working perfectly. The students are becoming
 more and more sluggish by the day. 
"

[node name="Label2" type="Label" parent="Converstaion/Node2D/Instructions/MarginContainer/HBoxContainer"]
visible = false
margin_left = 644.0
margin_top = 17.0
margin_right = 1293.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 36 )
text = "  ???: Yes, indeed. Our sedative-laced water fountains are doing wonders. 
	  The students are unknowingly drinking it during lunchtime, and they are falling
	  right into our trap.
 "

[node name="Label3" type="Label" parent="Converstaion/Node2D/Instructions/MarginContainer/HBoxContainer"]
visible = false
margin_left = 1297.0
margin_top = 17.0
margin_right = 1656.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 36 )
text = "  ???: It's the perfect way to subdue them
  without raising any suspicion. Soon, 
  the entire school will be under our control.
"

[node name="Label4" type="Label" parent="Converstaion/Node2D/Instructions/MarginContainer/HBoxContainer"]
visible = false
margin_left = 1660.0
margin_top = 17.0
margin_right = 2189.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 36 )
text = "  ???: Yes, and with the students weakened and sedated,
  we can carry out our nefarious plans without any interference.
  They won't even know what hit them.
"

[node name="Label5" type="Label" parent="Converstaion/Node2D/Instructions/MarginContainer/HBoxContainer"]
visible = false
margin_left = 2193.0
margin_top = 17.0
margin_right = 2733.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 36 )
text = "  ???: Exactly. It's the ultimate scheme - taking advantage 
  of their trust in the water fountains and using it against them. 
  They won't suspect a thing.
"

[node name="Label6" type="Label" parent="Converstaion/Node2D/Instructions/MarginContainer/HBoxContainer"]
visible = false
margin_left = 2737.0
margin_top = 17.0
margin_right = 3231.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 36 )
text = "  ???: It's brilliant. We'll continue to dose the water fountains
  until our plan is fully executed. No one will dare 
  stand in our way.
"

[node name="Label7" type="Label" parent="Converstaion/Node2D/Instructions/MarginContainer/HBoxContainer"]
visible = false
margin_left = 3235.0
margin_top = 30.0
margin_right = 3586.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 36 )
text = "  ???: To our success! The students won't 
  know what hit them until it's too late.
"

[node name="Label8" type="Label" parent="Converstaion/Node2D/Instructions/MarginContainer/HBoxContainer"]
visible = false
margin_left = 3590.0
margin_top = 17.0
margin_right = 3992.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 36 )
text = "  ???: Cheers to that! The sedated students
  will be our key to victory. We'll rule this school 
  with an iron fist.
"

[node name="NinePatchRect" type="NinePatchRect" parent="Converstaion"]
visible = false
modulate = Color( 0.764706, 0.0823529, 0.0823529, 1 )
self_modulate = Color( 0.8, 0.0823529, 0.0823529, 1 )
show_behind_parent = true
material = SubResource( 32 )
margin_left = 109.0
margin_top = 104.0
margin_right = 924.0
margin_bottom = 496.0
texture = SubResource( 34 )

[node name="Text1" type="RichTextLabel" parent="Converstaion"]
visible = false
margin_left = 356.0
margin_top = 269.0
margin_right = 782.0
margin_bottom = 521.0
text = "1"

[node name="Text2" type="RichTextLabel" parent="Converstaion"]
visible = false
margin_left = 356.0
margin_top = 269.0
margin_right = 782.0
margin_bottom = 521.0
text = "2"

[node name="Text3" type="RichTextLabel" parent="Converstaion"]
visible = false
margin_left = 356.0
margin_top = 269.0
margin_right = 782.0
margin_bottom = 521.0
text = "3"

[node name="Text4" type="RichTextLabel" parent="Converstaion"]
visible = false
margin_left = 356.0
margin_top = 269.0
margin_right = 782.0
margin_bottom = 521.0
text = "4"

[node name="Text5" type="RichTextLabel" parent="Converstaion"]
visible = false
margin_left = 356.0
margin_top = 269.0
margin_right = 782.0
margin_bottom = 521.0
text = "5"

[connection signal="timeout" from="ColorRect/ColorRectTimer" to="ColorRect" method="_on_ColorRectTimer_timeout"]
[connection signal="timeout" from="Instructions/InstructionsTimer" to="Instructions" method="_on_InstructionsTimer_timeout"]
[connection signal="body_entered" from="Area" to="Instructions" method="_on_Area_body_entered"]
[connection signal="body_entered" from="Area2" to="go to vent text" method="_on_Area2_body_entered"]
[connection signal="timeout" from="go to vent text/Timer" to="go to vent text" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area3" to="Converstaion" method="_on_Area3_body_entered"]
